--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<p>Sapling Studios</p>
 		<p>448 E 600 N Apt. 27</p>
 		<p>Provo, UT</p>
-		<p>Email: johnigonza@gmail.com</p>
+		<p>Email: john.gonzalez@sapling-studios.com</p>
 	</footer>
 </body>
 </html>
